fixed burger
burger was overlapping with the slogan on mobile. Fixed this by using flex instead of postition: absolute.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 html {
-    width: 100vw;
+    width: 99vw;
     background-color: whitesmoke;
 }
 body {
@@ -68,6 +68,13 @@ nav {
     font-size: 1.5em;
 }
 @media screen and (max-width: 700px) {
+    header {
+        flex-direction: row;
+    }
+    header h4 {
+        order: 2
+    }
+
     nav {
         position: absolute;
         left: 0px;
@@ -81,20 +88,17 @@ nav {
         transform: translateX(-100%);
         transition: transform 0.5s ease-in;
     }
+    .nav-active {
+        transform: translateX(0%);
+    }
     .navItem {
         opacity: 0;
     }
     .burger {
         display: block;
-        position: absolute;
-        top: 4.5vh;
-        left: 5%;
-        z-index: 11;
         cursor: pointer;
         transition: transform 0.5s ease;
-    }
-    .nav-active {
-        transform: translateX(0%);
+        order: 1;
     }
 }
 
